[gd_scene load_steps=14 format=3 uid="uid://cmfafxveywsoj"]

[ext_resource type="Theme" uid="uid://8l1lb48ylpmg" path="res://ui_theme.tres" id="1_4cq66"]
[ext_resource type="Script" uid="uid://btg33v8ti76cp" path="res://ship_container.gd" id="1_v4325"]
[ext_resource type="Script" uid="uid://dsrno3f2va332" path="res://follow_text.gd" id="2_v4325"]
[ext_resource type="Texture2D" uid="uid://dt21jtdpy7hrm" path="res://sprites/operation-drifter_particletrailspritesheet.png" id="3_78o8j"]
[ext_resource type="Texture2D" uid="uid://fii3f6bdf27j" path="res://sprites/playership.png" id="3_xpsff"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xpsff"]
particles_animation = true
particles_anim_h_frames = 8
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_pb2vj"]
offsets = PackedFloat32Array(0.6745283, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sweqy"]
gradient = SubResource("Gradient_pb2vj")

[sub_resource type="Curve" id="Curve_78o8j"]
_data = [Vector2(0, 0), 0.0, -0.022369564, 0, 0, Vector2(0.04819276, 1), 0.14536445, 0.14536445, 0, 0, Vector2(0.7443609, 0.82398456), -1.5242704, -1.5242704, 0, 0, Vector2(1, 0), -2.8083508, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_hqtel"]
curve = SubResource("Curve_78o8j")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_pmrbh"]
lifetime_randomness = 0.1
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 12.0
angle_min = -720.0
angle_max = 720.0
direction = Vector3(0, 1, 0)
spread = 5.0
initial_velocity_min = 10.0
initial_velocity_max = 30.0
angular_velocity_min = -180.00002
angular_velocity_max = 179.99998
orbit_velocity_min = -0.019999906
orbit_velocity_max = 0.020000096
gravity = Vector3(0, 0, 0)
damping_max = 2.0
scale_max = 2.0
scale_curve = SubResource("CurveTexture_hqtel")
color_ramp = SubResource("GradientTexture1D_sweqy")
anim_offset_max = 1.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_r62pu"]
radius = 32.0
height = 128.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4cq66"]
radius = 96.0
height = 256.0

[node name="Ship Container" type="Node2D"]
script = ExtResource("1_v4325")

[node name="Ship" type="CharacterBody2D" parent="."]
z_index = 4
motion_mode = 1
wall_min_slide_angle = 1.0471976

[node name="TrailParticles" type="GPUParticles2D" parent="Ship"]
z_index = 1
texture_filter = 1
material = SubResource("CanvasItemMaterial_xpsff")
position = Vector2(0, 64)
amount = 64
amount_ratio = 0.0
texture = ExtResource("3_78o8j")
randomness = 0.1
fixed_fps = 24
process_material = SubResource("ParticleProcessMaterial_pmrbh")

[node name="Sprite2D" type="Sprite2D" parent="Ship"]
z_index = 1
texture_filter = 1
texture = ExtResource("3_xpsff")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ship"]
shape = SubResource("CapsuleShape2D_r62pu")

[node name="Area2D" type="Area2D" parent="Ship"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ship/Area2D"]
shape = SubResource("CapsuleShape2D_4cq66")

[node name="RichTextLabel" type="RichTextLabel" parent="." node_paths=PackedStringArray("target")]
texture_filter = 1
offset_left = -32.0
offset_top = 64.0
offset_right = 608.0
offset_bottom = 384.0
scale = Vector2(0.1, 0.1)
theme = ExtResource("1_4cq66")
bbcode_enabled = true
text = "[center][wave amp=8.0 freq=4.0 connected=1][pulse freq=0.5 color=#ffffff40 ease=-2.0][E] Enter[/pulse][/wave][/center]"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_v4325")
target = NodePath("../Ship")

[connection signal="body_entered" from="Ship/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Ship/Area2D" to="." method="_on_area_2d_body_exited"]
